--- a/public/scss/components/musicplayer.scss
+++ b/public/scss/components/musicplayer.scss
@@ -785,6 +785,9 @@ div#meta-container div.song-artist-album span {
   3. Layout
 */
 body {
+  background-image: -webkit-linear-gradient(316deg, #3bd2ae 0%, #36bac2 100%);
+  background-image: linear-gradient(-226deg, #3bd2ae 0%, #36bac2 100%);
+  height: 100vh;
   -webkit-font-smoothing: antialiased;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   line-height: 1.5;
@@ -821,3 +824,11 @@ div#large-visualization {
 /*
   5. Themes
 */
+/*
+  6. Utils
+*/
+/*
+  7. Vendors
+*/
+
+/*# sourceMappingURL=app.css.map */
