--- a/public/scss/components/kanban.scss
+++ b/public/scss/components/kanban.scss
@@ -37,6 +37,13 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    background-color: #e4e4e4;
+    width: 100%;
+  }
+
+  .taskList {
+    overflow-y: auto;
+    max-height: calc(77vh - 120px);
   }
 }
 
@@ -67,6 +74,7 @@
   width: 100%;
   padding: 10px 20px;
   border-radius: 5px;
+  margin-bottom: 10px;
 
   p {
     margin-bottom: 0;
