--- a/public/scss/components/kanban.scss
+++ b/public/scss/components/kanban.scss
@@ -80,6 +80,28 @@
     margin-bottom: 0;
   }
 
+  .taskcard-heading {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    img {
+      width: 20px;
+      height: auto;
+    }
+
+    button {
+      background: none;
+      color: inherit;
+      border: none;
+      padding: 0;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
+    }
+  }
+
   .content-information {
     display: flex;
     align-items: center;
