--- a/public/scss/components/kanban.scss
+++ b/public/scss/components/kanban.scss
@@ -75,6 +75,7 @@
   padding: 10px 20px;
   border-radius: 5px;
   margin-bottom: 10px;
+  color: #000;
 
   p {
     margin-bottom: 0;
@@ -152,20 +153,29 @@
 }
 
 #taskform {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
   input {
     width: 100%;
-    margin-bottom: 15px;
-  }
-
-  select {
-    margin-bottom: 15px;
   }
 
   label {
     display: block;
   }
+
+  select {
+    padding: 8px 10px;
+    border: solid 1.5px #d4d4d4;
+    border-radius: 3px;
+  }
 }
 
 .draggable.dragging {
   opacity: 0.5;
+}
+
+#task-button {
+  margin-left: auto;
 }
