--- a/public/scss/components/flashcard.scss
+++ b/public/scss/components/flashcard.scss
@@ -1,3 +1,89 @@
+//Flashcard Section Styling
+.flashcard-section {
+  margin: 60px 0;
+  padding: 10px 40px 30px;
+  width: calc(100% - 60px);
+  background-color: #e5e5e5;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+//Section Header Styling
+.section-header {
+  width: 100%;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  h5 {
+    margin-bottom: 0;
+    margin-right: auto;
+  }
+
+  button:first-of-type {
+    margin-right: 6px;
+  }
+
+  #btn-open-all-links {
+    img {
+      height: 20px;
+      width: auto;
+    }
+  }
+}
+
+//Flashcard Link Styling
+.flashcard-links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 30px;
+  li {
+    width: 100%;
+    a {
+      word-break: break-all;
+      width: fit-content;
+    }
+  }
+}
+
+.remove-link-button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  margin-left: 20px;
+
+  img {
+    height: 21px;
+    width: auto;
+  }
+}
+
+//Flashcard Footer Styling
+.flashcard-footer {
+  display: flex !important;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+
+  button:nth-of-type(2) {
+    margin-left: auto;
+  }
+
+  input {
+    width: 40%;
+    margin-right: 10px;
+  }
+}
+
+//Flashcard Accordian Styling
 .accordion {
   width: 100%;
 }
@@ -6,6 +92,7 @@
   width: 100%;
 }
 
+//Flashcard Form Styling
 form#flashcardForm {
   display: flex;
   align-items: flex-start;
@@ -20,40 +107,19 @@ form#flashcardForm {
     width: 100%;
   }
 
-  input:nth-of-type(2) {
+  textarea {
     height: 200px;
+    border: solid 1.5px #d4d4d4;
+    width: 100%;
+    padding: 5px 10px;
+    resize: none;
+    overflow-y: auto;
+    margin-bottom: 10px;
+    border-radius: 3px;
   }
 
   button {
     margin-top: 15px;
     margin-left: auto;
-  }
-}
-
-.flashcard-section {
-  margin: 60px 0;
-  padding: 10px 40px 30px;
-  width: calc(100% - 60px);
-  background-color: #e5e5e5;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.add-section-container {
-  width: 100%;
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  h5 {
-    margin-bottom: 0;
-    margin-right: auto;
-  }
-
-  button:first-of-type {
-    margin-right: 6px;
   }
 }
