additional work in read.me file and styling for time features

--- a/public/scss/components/flashcard.scss
+++ b/public/scss/components/flashcard.scss
@@ -93,6 +93,9 @@
   input {
     width: 40%;
     margin-right: 10px;
+    padding: 8px 10px;
+    border: solid 1.5px #d4d4d4;
+    border-radius: 3px;
   }
 }
 
