--- a/public/scss/components/workspace.scss
+++ b/public/scss/components/workspace.scss
@@ -61,6 +61,10 @@ div.time-links {
 
     li {
       margin-bottom: 5px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
       a {
         color: grey;
         text-decoration: none;
@@ -73,6 +77,11 @@ div.time-links {
       a.active {
         color: #457b9d;
         font-weight: 600;
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
       }
     }
   }
@@ -89,7 +98,8 @@ div.time-links {
 }
 
 .pomodoro-buttons,
-.number-of-sessions {
+.number-of-sessions,
+.stopwatch-buttons {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -162,6 +172,7 @@ div.time-links {
         align-items: center;
         flex-direction: column;
         margin-left: 15px;
+        cursor: default;
       }
     }
   }
