wrote up more detailed code comments for kanban board

--- a/public/scss/components/flashcard.scss
+++ b/public/scss/components/flashcard.scss
@@ -112,6 +112,9 @@ form#flashcardForm {
   input {
     margin-bottom: 10px;
     width: 100%;
+    padding: 8px 10px;
+    border: solid 1.5px #d4d4d4;
+    border-radius: 3px;
   }
 
   textarea {
