--- a/public/scss/components/musicplayer.scss
+++ b/public/scss/components/musicplayer.scss
@@ -1,3 +1,12 @@
+/* Functional Classes */
+.active {
+  background-color: #ffffff6d;
+}
+
+.hidden {
+  display: none;
+}
+
 /* Music Player Section Styling */
 .music-player {
   display: flex;
@@ -47,7 +56,7 @@
       margin: 0 0.5rem;
     }
 
-    //Runnign track number
+    //Running track number
     .playlist-track-number {
       margin-right: 1rem;
     }
@@ -90,14 +99,6 @@
   }
 }
 
-.active {
-  background-color: #ffffff6d;
-}
-
-.hidden {
-  display: none;
-}
-
 .details {
   display: flex;
   align-items: flex-start;
@@ -113,6 +114,7 @@
   margin: 10px;
   height: 150px;
   width: 150px;
+  /* Default image*/
   background-image: url("https://images.pexels.com/photos/262034/pexels-photo-262034.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
   background-size: cover;
 }
@@ -152,7 +154,7 @@
   align-items: center;
 }
 
-/* Modify the appearance of the slider */
+/* Slider Appearance */
 .seek_slider {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -171,7 +173,7 @@
   appearance: none;
   width: 15px;
   height: 15px;
-  background: #43aa8b;
+  background: #0d6efd;
   cursor: pointer;
   border-radius: 50%;
 }
