--- a/public/scss/layout.scss
+++ b/public/scss/layout.scss
@@ -1,7 +1,3 @@
-@import "./components/kanban.scss";
-@import "./components/workspace.scss";
-@import "./components/flashcard.scss";
-
 img#logo {
   width: 150px;
   height: auto;
@@ -100,4 +96,25 @@ main {
 .box {
   border-radius: 4px;
   padding: 20px;
+}
+
+/* Functional Colour tags */
+.red {
+  background-color: #f94144;
+}
+
+.green {
+  background-color: #43aa8b;
+}
+
+.orange {
+  background-color: #f8961e;
+}
+
+.blue {
+  background-color: #457b9d;
+}
+
+button.blue {
+  border: 1px solid #457b9d;
 }
